<resources>
    <string name="app_name">Bootstrap Sample</string>
    <string name="hint_enter_email">Enter email</string>
    <string name="hint_setup_pin">Enter Pin</string>
    <string name="title_code_generation">Code Generation</string>
    <string name="title_code_registration">Code Registration</string>
    <string name="title_users">Users</string>

    <string name="button_select_user">Select User</string>
    <string name="button_register_user">Register new User</string>
    <string name="button_generate_code">Generate Code</string>
    <string name="label_id">Identity:</string>
    <string name="label_state">State:</string>
    <string name="label_customer_id">CustomerId:</string>
    <string name="label_backend">Backend:</string>
    <string name="label_selected_user">Selected User:</string>
    <string name="label_bootstrap_code">Bootstrap Code:</string>
    <string name="hint_enter_bootstrap_code">Enter bootstrap code</string>
    <string name="user_already_registered_message">User already registered</string>
    <string name="registration_successful_message">Successful registration</string>
    <string name="button_submit">Submit</string>
    <string name="button_resend_email">Resend e-mail</string>
    <string name="button_confirmed">Confirmed</string>
    <string name="remove">Remove</string>

    <!-- M-Pin configuration -->
    <string name="mpin_backend" formatted="false" translatable="false">https://api.mpin.io</string>
    <string name="mpin_cid" formatted="false" translatable="false"></string>

    <!-- Custom service configuration -->
    <string name="access_code_service_base_url" formatted="false" translatable="false"></string>
</resources>
